plugins {
    id 'fabric-loom' version '0.12-SNAPSHOT'
    id 'io.github.juuxel.loom-quiltflower' version '1.+'
    id 'org.quiltmc.quilt-mappings-on-loom' version '4.+'
    id 'maven-publish'
}

loom {
    accessWidenerPath = file("src/main/resources/twilightforest.accesswidener")
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

archivesBaseName = "${project.mod_id}-fabric-${minecraft_version}"
version = (hasProperty("CIRevision") ? CIRevision : project.mod_version)
group = project.group_name

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

repositories {
    maven { url = "https://cursemaven.com" }
    maven { url = "https://maven.shedaniel.me/" }
    maven { url = uri("https://storage.googleapis.com/devan-maven/") }
    maven { url = "https://maven.terraformersmc.com/releases/" }
    maven { url "https://nexus.resourcefulbees.com/repository/maven-public/" }
    maven { url 'https://jitpack.io' }
    maven { url = "https://mvn.devos.one/releases/" }
    maven { url = "https://mvn.devos.one/snapshots/" }
    maven { url "https://ladysnake.jfrog.io/artifactory/mods" }
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }
    maven {
        url 'https://repo.maven.apache.org/maven2'
        name 'Maven Central'
    }
    maven {
        name = "BuildCraft"
        url = "https://mod-buildcraft.com/maven"
    }
    maven {
        name = "ParchmentMC"
        url = "https://maven.parchmentmc.net/"
    }
    maven {
        url = "https://maven.jamieswhiteshirt.com/libs-release"
        content {
            includeGroup("com.jamieswhiteshirt")
        }
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    mappings loom.layered() {
        it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:1.18.2+build.22:v2")) // https://maven.quiltmc.org/#browse/browse:release
        it.parchment("org.parchmentmc.data:parchment-1.18.2:BLEEDING-20220313.132143-1@zip") // https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/parchment-1.18.1/BLEEDING-SNAPSHOT
        it.officialMojangMappings {
            setNameSyntheticMembers(true)
        }
    }
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    //Dev Environment Only
    modCompileOnly ("me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    modRuntimeOnly ("me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    modImplementation("dev.architectury:architectury-fabric:${project.architectury_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }

    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    implementation(include("com.electronwill.night-config:core:3.6.5"))
    implementation(include("com.electronwill.night-config:toml:3.6.5"))
    modImplementation(include("io.github.fabricators_of_create:Porting-Lib:${project.port_lib_version}+${project.minecraft_version}.${project.port_lib_hash}"))
    //modImplementation "com.telepathicgrunt:Blame-Fabric:1.17-4.2.0-fabric"
//    modImplementation 'com.github.Chocohead:Fabric-ASM:v2.3'

    modImplementation(include("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attributes_version}"))
    modImplementation(include("curse.maven:forge-config-api-port-fabric-547434:${project.config_api_version}"))

//     modImplementation("curse.maven:irisshaders-fabric-455508:3605379")
//     modImplementation "org.anarres:jcpp:1.4.14"

    modApi ("com.terraformersmc:modmenu:3.1.0") {
        exclude(group: "net.fabricmc.fabric-api")
    }

    //include modImplementation("net.devtech:arrp:0.+")

    //Compiled Jar Side
    modApi(include("me.shedaniel.cloth:basic-math:0.6.0")) {
        exclude(group: "net.fabricmc.fabric-api")
    }
    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
    include "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
    include "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"

    include 'com.github.Chocohead:Fabric-ASM:v2.3'
    modImplementation 'com.github.AlphaMode:FabricExtendibleEnum:1.18-SNAPSHOT'
    modImplementation(include("me.alphamode:ForgeTags:2.1"))
    modImplementation "dev.emi:trinkets:${trinkets_version}"
//    modImplementation(include('com.github.alkyaly:js-coremods-fabric:1.0.0'))
}

loom {
    runs {
        datagen {
            client()

            name "Data Generation"
            vmArg "-Dfabric-api.datagen"
            vmArg "-Dfabric-api.datagen.output-dir=${file("src/generated/resources")}"
            vmArg "-Dfabric-api.datagen.modid=twilightforest"

            property "twilightforest.data.existingData", file("src/main/resources").absolutePath

            runDir "build/datagen"
        }
    }
}
assemble.dependsOn runDatagen

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"

    it.options.release = 17
}

java {
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}"}
    }
}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}